--- a/.github/workflows/sync-and-build-images.yml
+++ b/.github/workflows/sync-and-build-images.yml
@@ -148,6 +148,12 @@ jobs:
         id: image_sha
         run: echo "value=$(git rev-parse HEAD)" >> "$GITHUB_OUTPUT"
 
+      - name: Resolve image owner
+        id: image_owner
+        env:
+          OWNER: ${{ github.repository_owner }}
+        run: echo "value=$(echo "$OWNER" | tr '[:upper:]' '[:lower:]')" >> "$GITHUB_OUTPUT"
+
       - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
@@ -163,7 +169,7 @@ jobs:
           push: true
           platforms: ${{ vars.DOCKER_PLATFORMS || 'linux/amd64' }}
           tags: |
-            ghcr.io/${{ github.repository_owner }}/${{ matrix.image }}:sha-${{ steps.image_sha.outputs.value }}
-            ghcr.io/${{ github.repository_owner }}/${{ matrix.image }}:latest
+            ghcr.io/${{ steps.image_owner.outputs.value }}/${{ matrix.image }}:sha-${{ steps.image_sha.outputs.value }}
+            ghcr.io/${{ steps.image_owner.outputs.value }}/${{ matrix.image }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
